# Cripto_price

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml.yml
alembic/: env.py
alembic/versions/: b2ef2bb3d710_create_prices_table.py
app/: main.py
app/api/: dependencies.py  health.py  routes.py
app/core/: config.py  middleware.py
app/db/: database.py  models.py
app/db/queries/: price_queries.py
app/schemas/: price.py
app/services/: deribit_client.py  price_fetcher.py  price_service.py
app/tasks/: celery_app.py  celery_worker.py  price_tasks.py
app/tests/: test_api.py  test_deribit_client.py  test_services.py
